Added custom title bar

--- a/Transact/Resources/layout/AddAccount.axml
+++ b/Transact/Resources/layout/AddAccount.axml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="100">
-    <EditText
+  <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+  <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txtAccountName"
