--- a/Transact/Resources/layout/Main.axml
+++ b/Transact/Resources/layout/Main.axml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="100">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
