--- a/Transact/Resources/layout/listView_transactions.axml
+++ b/Transact/Resources/layout/listView_transactions.axml
@@ -7,18 +7,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="10"
+        android:layout_weight="5"
         android:id="@+id/txtTransactionDate"
         android:text="Date"
         android:paddingTop="20dp"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:paddingLeft="5dp" />
     <LinearLayout
         android:orientation="vertical"
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="85"
+        android:layout_weight="90"
         android:id="@+id/linearLayout1">
         <TextView
             android:text="Name"
@@ -28,7 +29,8 @@
             android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:textStyle="bold" />
         <TextView
             android:id="@+id/txtTransactionCategory"
             android:paddingLeft="5dp"
