--- a/Transact/Resources/layout/Main.axml
+++ b/Transact/Resources/layout/Main.axml
@@ -7,12 +7,11 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="85"
-        android:id="@+id/lstAccounts"
-        android:layout_marginBottom="0.0dp" />
+        android:id="@+id/lstAccounts" />
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
