--- a/Transact/Resources/layout/listView_accounts.axml
+++ b/Transact/Resources/layout/listView_accounts.axml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="65dp"
     android:weightSum="100">
     <LinearLayout
         android:orientation="vertical"
@@ -38,10 +38,9 @@
         android:layout_weight="5"
         android:id="@+id/txtAccountBalance"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp"
+        android:paddingTop="20dp"
         android:layout_gravity="right"
         android:layout_height="wrap_content"
         android:textSize="18dp"
-        android:textStyle="bold"
-        android:paddingBottom="40dp" />
+        android:textStyle="bold" />
 </LinearLayout>
