--- a/Transact/Resources/layout/Transactions.axml
+++ b/Transact/Resources/layout/Transactions.axml
@@ -4,15 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="100">
-  <include
+    <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="85"
+    <android.support.v7.widget.RecyclerView
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:id="@+id/lstTransactions"
-        android:layout_marginBottom="0.0dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
