--- a/Transact/Resources/layout/Main.axml
+++ b/Transact/Resources/layout/Main.axml
@@ -9,7 +9,7 @@
         layout="@layout/toolbar" />
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="85"
         android:id="@+id/lstAccounts" />
     <LinearLayout
