--- a/Transact/Resources/layout/Transactions.axml
+++ b/Transact/Resources/layout/Transactions.axml
@@ -12,7 +12,8 @@
         android:minHeight="25px"
         android:id="@+id/lstTransactions"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_weight="85" />
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
