--- a/Transact/Resources/layout/AddAccount.axml
+++ b/Transact/Resources/layout/AddAccount.axml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:weightSum="100">
   <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+        android:id="@+id/toolbar_top"
+        layout="@layout/toolbar_top" />
   <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
