--- a/Transact/Resources/layout/EnterTransaction.axml
+++ b/Transact/Resources/layout/EnterTransaction.axml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
   <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+        android:id="@+id/toolbar_top"
+        layout="@layout/toolbar_top" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
