--- a/Transact/Resources/layout/Transactions.axml
+++ b/Transact/Resources/layout/Transactions.axml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:weightSum="100">
     <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+        android:id="@+id/toolbar_top"
+        layout="@layout/toolbar_top" />
     <android.support.v7.widget.RecyclerView
         android:minWidth="25px"
         android:minHeight="25px"
