--- a/Transact/Resources/layout/toolbar_bottom.axml
+++ b/Transact/Resources/layout/toolbar_bottom.axml
@@ -2,7 +2,7 @@
 <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar_bottom"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:minHeight="?android:attr/actionBarSize"
-    android:background="#ffffff"
+    android:background="#666b75"
     android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar" />
