Changed theme to material.light, added up button to transactions screen, and added color.xml file

--- a/Transact/Resources/layout/toolbar_bottom.axml
+++ b/Transact/Resources/layout/toolbar_bottom.axml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="65dp"
     android:minHeight="?android:attr/actionBarSize"
-    android:background="#ffffff"
+    android:background="@color/ToolbarBottom"
     android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar" />
